CMAKE_MINIMUM_REQUIRED (VERSION 3.10)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
PROJECT (ATSAPP C)
FIND_PACKAGE (ATS REQUIRED)
IF (NOT ATS_FOUND)
	MESSAGE (FATAL_ERROR ”ATS Not Found!”)
ENDIF ()
ATS_INCLUDE (src/SATS src/DATS src/HATS)
IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/node_modules)
    ATS_INCLUDE(node_modules)
ENDIF()
set(CMAKE_C_FLAGS "-DATS_MEMALLOC_LIBC -D_DEFAULT_SOURCE")
ATS_COMPILE (TEST_SRC
	src/SATS/shared_vt.sats
	src/DATS/shared_vt.dats
	)
ADD_LIBRARY(ats-shared-vt ${TEST_SRC})
